--- a/gb/nsc413_3.md
+++ b/gb/nsc413_3.md
@@ -1,4 +1,13 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/asdfghy6/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://git.io/fjHxp" rel="nofollow">大纪元</a> | <a href="https://git.io/fjHxh" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://git.io/fjHpJ" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://git.io/fjHpk" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://git.io/fjHpL" rel="nofollow">看中国</a> | <a href="https://git.io/fjHpt" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://git.io/fjHpm" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://git.io/fjHpO" rel="nofollow">新唐人</a> | <a href="https://git.io/fjHps" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>大陆新闻</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/asdfghy6/yh/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/asdfghy6/fq/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/25/n11545309.md#1" target="_blank">中共国台办首度证实 台学者蔡金树遭羁押</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/25/n11545309.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/840cecc0753fedc947c3a61378c72de0-150x120.jpg" align ="left"></a>中共以国安理由将蓝营学者蔡金树关押至今，海基会在9月13日证实，其去年7月20日在厦门失联，我方多次去函询问未获中国大陆具体回应。国台办9月25日例会上首度松口，蔡因涉嫌从事危害国家安全的活动，被有关部门依法审查，已通知他的家属，不存在失联的问题。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月25日 9:47 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/25/n11545125.md#1" target="_blank">【翻墙必看】分析：中共在香港上演最后疯狂</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/25/n11545125.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/9564ca23-0c2e-4352-b08f-95a3f5ea1bdb-150x120.jpeg" align ="left"></a>】大纪元每天为读者梳理翻墙必看的文章：
+
+1.王友群：“中国共产党亡”进入倒计时
+10月1日，是中共颠覆中华民国70年。这是马列子孙——中共，而不是炎黄子孙——中华儿女，统治中国的70年。
+
+2.孟晚舟出庭 脚上“电子脚镣”有6大功能
+华为副董事长兼财务总监孟晚舟，9月23日离开其温哥华的豪宅，前往法庭接受聆讯时，露出了戴在她脚上的跟踪设备——电.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月25日 9:36 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/25/n11545564.md#1" target="_blank">法国修订“生物伦理法”抵制中共器官贩卖</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/25/n11545564.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/48789669947_2bafb2ee0c_z-150x120.jpg" align ="left"></a>2019年9月24日至10月9日，法国国民议会针对“生物伦理法”中“器官捐赠”条例的草案进行讨论审议。法国议员还在欧洲首次提出要建立“海外器官移植者登记制度”，这或将推动整个欧洲的器官移植管理。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月25日 6:56 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/25/n11545207.md#1" target="_blank">【揭密】镇压抗议者 中共防暴声波武器面世</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/25/n11545207.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/GettyImages-1149421108-600x400-150x120.jpg" align ="left"></a>中国（共）科学院日前表示，已研制出世界上第一把用于控制示威民众的手持式声波武器，并即将投入批量生产。评论表示，中共政权不稳，维稳升级，动用高科技保政权。
 
 中国（共）科学院旗下理化技术研究所（IPC）官方网站9月18日报导，9月4日，由中科院理化所承担的国家重点研发计划“重特大社会安全事件现场处置技术与装备研发”项目课题六“警用携带型低频强声定向驱散技术.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月25日 4:38 PM							</td></tr>
@@ -26,12 +35,9 @@
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/24/n11543678.md#1" target="_blank">【新闻看点】吃饭就是人权？中共白皮书遭轰</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/24/n11543678.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/12/9ceecbe5-995f-442d-84b4-8a23383ac9ac-1_meitu_2-600x400-150x120.jpg" align ="left"></a>22日，中共发表了《人权白皮书》，吹嘘取得了“人权巨大成就”。在遮盖“言论、新闻、结社”等基本人权概念的同时，中共称“人民幸福生活是最大的人权”。白皮书一出来，立刻引来了各方嘲笑。有网友直接说“吃饱饭就是人权？”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月25日 4:20 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/24/n11544229.md#1" target="_blank">武汉当局借军运会加剧迫害法轮功学员</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/24/n11544229.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/1-67-600x370-150x120.jpg" align ="left"></a>武汉将于10月18日至27日举办第七届世界军人运动会。公安借此理由，加剧骚扰迫害当地的法轮功学员。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月25日 4:09 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/24/n11543861.md#1" target="_blank">孟晚舟出庭 脚上“电子脚镣”有6大功能</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/24/n11543861.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/GettyImages-1170531118-150x120.jpg" align ="left"></a>华为副董事长兼财务总监孟晚舟，9月23日离开其温哥华的豪宅，前往法庭接受聆讯时，露出了戴在她脚上的跟踪设备——电子脚镣。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月25日 3:19 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/24/n11544101.md#1" target="_blank">维权人士看守所猝死 妻子哭诉：中共太黑暗</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/24/n11544101.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/wang-yumei-150x120.jpg" align ="left"></a>北京时间星期一（9月23日）凌晨4点多，曹曙霞被一通电话铃声惊醒。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月25日 3:11 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/24/n11544107.md#1" target="_blank">陕西临潼“70周年庆”花坛起火 民众叫好</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/24/n11544107.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/Unknown-11-150x120.jpg" align ="left"></a>十一“国殇日”逼近，中国大陆处处进入草木皆兵的神经绷紧状态之际，陕西临潼的一个中共“70周年庆”的摆设被烧毁，让民众开心不已。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月25日 3:07 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/24/n11544210.md#1" target="_blank">咸阳纪委前书记被指当内鬼 包庇涉黑人员</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/24/n11544210.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/quan-wangjun1-150x120.jpg" align ="left"></a>中共陕西省咸阳市委前常委、市纪委书记、市监委主任权王军日前被“双开”并移送司法。权王军被指对抗审查，为涉黑涉恶人员提供保护，泄露案情当“内鬼”，搞权色交易，收受贿赂等。外界曾传出，权王军落马前自杀未遂。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月25日 3:06 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/24/n11544133.md#1" target="_blank">川普联大演讲：中共不该再宣称是发展中国家</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/24/n11544133.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/000_1KL3WF-150x120.jpg" align ="left"></a>美国总统川普（特朗普）周二（9月24日）在联合国大会上发表演说。他对达成美中贸易协议表示乐观，但谴责中共的掠夺性行为。他表示，中共拒绝遵守承诺，拥抱一种不正当的经济模型。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月25日 2:30 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/24/n11544052.md#1" target="_blank">27国联大签网络联合声明 暗示针对中俄</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/24/n11544052.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/GettyImages-1170794931-150x120.jpg" align ="left"></a>27个国家签署了一项联合声明，就网络空间中的公平和犯规行为达成共识，并承诺推动负责任的网络空间行为。外界认为这个声明针对的是中共和俄罗斯。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月25日 1:59 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/24/n11543833.md#1" target="_blank">丹麦开反活摘会议 联合声明将提交欧洲首脑</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/24/n11543833.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/1.-Alla-150x120.jpeg" align ="left"></a>2019年9月17日，在丹麦首都哥本哈根市政会议中心召开了一场主题为“紧急行动，中共活摘器官关系到所有人”的研讨会。研讨会正值2019年欧洲器官移植学会大会（ESOT）在哥本哈根召开之际，更加引发了外界对这个话题的关注。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月25日 1:58 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/25/n11544982.md#1" target="_blank">防中共干预 马大维：加国应建外国代理登记处</a><br></h3>加拿大前驻华大使马大维（David Mulroney）表示，鉴于“中国共产党拥有发达的影响外国政治见解的机制”，加拿大应参考澳大利亚的做法，建立一个联邦登记处，记录加拿大人代表外国政府所做的工作。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月25日 10:30 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/25/n11546015.md#1" target="_blank">大陆富豪女涉同新欢谋杀男友 旧金山开审</a><br></h3>9月23日，美国湾区富二代女子李凡妮（Tiffany Li）涉嫌谋杀前男友一案开庭。检察官指控李凡妮伙同新男友卡维·巴亚（Kaveh Bayat）一起谋杀了李的前男友基思·格林（Keith Green）。李和巴亚拒不认罪，预计这个审判将持续到11月中旬。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月25日 10:23 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/25/n11545599.md#1" target="_blank">修炼法轮功绝症康复 武汉康佑元遭迫害离世</a><br></h3>武汉市法轮功学员康佑元多次遭绑架迫害，其中两次被关洗脑班，两次被非法劳教，被非法判刑3年，并遭酷刑折磨，身体受到极大的摧残，于2019年1月22日含冤离世。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月25日 9:23 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/25/n11545552.md#1" target="_blank">打一针玻尿酸 重庆19岁女生右眼失明</a><br></h3>近日，重庆19岁女大学生小陈前往一家美容院，工作人员在她的鼻子上注射了一针玻尿酸。小陈本以为自己将会变得更美，可未曾想，这一针下去后，她的右眼再也看不见了。经诊断，小陈的右眼动脉栓塞，复明的可能性极低。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月25日 5:31 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/25/n11544872.md#1" target="_blank">十一期间 天安门香山交通管制 店铺停业</a><br></h3>9月25日，中共当局宣布，从10月1日至7日，天安门广场地区、香山地区，采取严格交通管制措施。在此期间，除了天安门附近酒店不准住客进出外，小商铺、农贸批发市场从今起也开始停业。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月25日 12:40 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/25/n11544882.md#1" target="_blank">每日三退声明精选（2019/09/24）</a><br></h3>我在大学时由于成绩优异，被国内共党虚假消息洗脑，在学校和学院领导不断劝说下加入中共。后来来到美国，看到听到大量被中共隐藏和改编的事实真相，十分震惊和愤怒。于是在大约两年半前立即停交党费，与共产党邪恶组织脱离关系。由于担心共匪虚构事实，在此公开声明，我早已与中国共产党脱离关系，并且支持全世界正义联盟打倒共产党。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月25日 11:38 AM							</td></tr>
